<resources>
    <string name="app_name">Memhelper</string>
    <string name="passage_mem">篇章记忆</string>
    <string name="card_mem">卡片记忆</string>
    <string name="home">首页</string>
    <string name="settings">设置</string>
    <string name="add">添加</string>
    <string name="add_passage">添加篇章</string>
    <string name="back">返回</string>
    <string name="edit">编辑</string>
    <string name="write_title">输入标题</string>
    <string name="write_content">输入正文</string>
    <string name="proceed">下一步</string>
    <string name="add_bar_prompt">选定一段文本，即可添加黑条</string>
    <string name="add_random">随机添加黑条</string>
    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    <string name="menu_addcardset">添加卡片集</string>
    <string name="menu_delcardset">删除卡片集</string>
    <string name="clear">清屏</string>
    <string name="restore">复原</string>
    <string name="erase">擦除</string>
    <string name="paint">抹黑</string>
    <string name="delete">删除</string>
    <string name="self_test">自测</string>
    <string name="front_side">正面内容</string>
    <string name="back_side">背面内容</string>
    <string name="finish_test">结束自测</string>
    <string name="remember">记得</string>
    <string name="forgotten">不记得</string>
    <string name="next_card">下一张</string>
</resources>
